# adoc

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
assignment/: pytest.ini  start.sh
assignment/assignment/: authentication.py  exception.py  mongo.py  permission.py  settings.py  test_settings.py  urls.py
assignment/common/: dto.py  exception_code.py
assignment/community/: urls.py
assignment/community/api/: __init__.py  posts.py  posts_detail.py
assignment/community/models/: post.py
assignment/community/services/: post_service.py
assignment/tests/: conftest.py  test_post_service.py  test_token_service.py  test_user_service.py
assignment/user/: urls.py
assignment/user/api/: __init__.py  login.py  logout.py  refresh.py  signup.py
assignment/user/dtos/: token.py  user.py
assignment/user/migrations/: 0001_initial.py
assignment/user/models/: __init__.py  token.py  user.py
assignment/user/services/: token_service.py  user_service.py
